--- a/Arbitrage-Lab/bib_references_DOI.bib
+++ b/Arbitrage-Lab/bib_references_DOI.bib
@@ -552,3 +552,18 @@
   author = {Rotondi,  Francesco and Russo,  Federico},
   year = {2025}
 }
+
+@article{Beck2009,
+  title = {A Fast Iterative Shrinkage-Thresholding Algorithm for Linear Inverse Problems},
+  volume = {2},
+  ISSN = {1936-4954},
+  url = {http://dx.doi.org/10.1137/080716542},
+  DOI = {10.1137/080716542},
+  number = {1},
+  journal = {SIAM Journal on Imaging Sciences},
+  publisher = {Society for Industrial & Applied Mathematics (SIAM)},
+  author = {Beck,  Amir and Teboulle,  Marc},
+  year = {2009},
+  month = jan,
+  pages = {183-202}
+}
