--- a/JBF_Submission/__CEMFI_Working_Paper__/__main__CEMFI_Working_Paper.tex
+++ b/JBF_Submission/__CEMFI_Working_Paper__/__main__CEMFI_Working_Paper.tex
@@ -22,48 +22,37 @@
 }}
 
 \author[1]{
-{ 
-\bx \bx
-\textbf{Jesus Villota Miranda}$^{\dagger}$\footnote{
-\scriptsize{
-I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank discussants for their helpful comments, as well as the participants of the Banking \& Finance Seminar (CEMFI), the Generative AI in Finance Conference (Concordia University), the Mirian Andrés Seminar (University of La Rioja) and the 3rd Contemporary Issues in Financial Markets and Banking (Nottingham Trent University). Finally, I gratefully acknowledge financial support from Banco de España (BdE).
-}
-}}
-
-\bx 
-{\small
-$\big{<}$
-\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
-$\big{>}$
-
-$\big{<}$
-Email: \href{jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
-$\big{>}$
-%
-%\mx 
-%\textbf{This version: 17th October 2024}
-%
-}
+{  
+%{\large Jesus Villota Miranda}$^{\dagger}$
+%\footnote{
+%\scriptsize{
+%I am deeply grateful to [...].
+%% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
+%%Finally, 
+%I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
+%}
+%}
 }
 
-\date{}  % Remove date
+%\bx 
+%{\small
+%$\big{<}$
+%\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
+%$\big{>}$
+%
+%$\big{<}$
+%Email: \href{mailto:jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
+%$\big{>}$
 
-%\begin{document}
-%
-%\maketitle
-%\begin{abstract}
-%%----------------------------------------------------
-%\input{txt__ABSTRACT.tex}
-%%----------------------------------------------------
-%
-%\noindent\textbf{JEL Codes:} G12, G14, C45, C58, C63, D83
-%
-%\noindent\textbf{Keywords:} Large Language Models, Business News, Stock Market Reaction, Market Efficiency
-%\end{abstract}
+%\small \textbf{This version: \mydate\today}
+%}
+}
+\date{}
 
 
 \begin{document}
 \maketitle
+\thispagestyle{empty}
 %----------------------------------------------------
 \begin{abstract}
 \input{txt_0_Abstract.tex}
