[Working on the Barra model (currently moved to Appendix)]

--- a/Arbitrage-Lab/txt_Appendix.tex
+++ b/Arbitrage-Lab/txt_Appendix.tex
@@ -9,3 +9,8 @@
 %----------------------------------------------------
 \input{txt_A_algorithms.tex}
 %----------------------------------------------------
+
+
+%----------------------------------------------------
+\input{txt_A_barra_model.tex}
+%----------------------------------------------------
